# Tittut

./: .clang-format  .gitignore  Dockerfile  README.md  meson.build
tittut/: argparser.hpp  client.cpp  main.cpp  meson.build  sdl.hpp  server.cpp  tcp-interface.hpp  tcp-stream.hpp  tcp.hpp  utils.hpp  v4l-stream.hpp  v4l.hpp  video-server.hpp  video-stream.hpp  videostream.hpp
